Finished functional tests for /users route
